--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -50,18 +50,17 @@ body {
 
 a {
   font-weight: 500;
-  color: #646cff;
   text-decoration: inherit;
 }
 a:hover {
   color: #535bf2;
 }
 
-body {
+.style-login {
   margin: 0;
-  display: flex;
   place-items: center;
   min-width: 320px;
+  display: grid;
   min-height: 100vh;
 }
 
