--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,8 +12,8 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
-    --background-start-rgb:253, 254, 254 ;
-    --background-end-rgb:27, 79, 114;
+    --background-start-rgb: 27, 79, 114 ;
+    --background-end-rgb:253, 254, 254 ;
     
     
     
@@ -115,8 +115,8 @@ button:focus-visible {
 
 .flight-card {
   background-color: #ffffff;
-  border: 1px solid #ddd;
-  padding: 20px;
+  border: 1px solid #ddd; 
+  margin-top: 10px;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: box-shadow 0.3s ease-in-out;
